auth module added

--- a/package.json
+++ b/package.json
@@ -4,48 +4,51 @@
   "description": "Production-grade LMS + e-commerce platform with micro-frontend architecture",
   "private": true,
   "license": "MIT",
-  "packageManager": "pnpm@8.15.0",
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
+    "node": ">=18.0.0"
   },
   "type": "module",
+  "workspaces": [
+    "packages/*",
+    "apps/*",
+    "apps/widgets/*",
+    "services/*",
+    "db"
+  ],
   "scripts": {
-    "dev": "pnpm run --parallel dev:shell dev:widgets dev:services",
-    "dev:shell": "cd apps/shell && pnpm run dev",
-    "dev:widgets": "pnpm run --parallel --filter './apps/widgets/*' dev",
-    "dev:services": "pnpm run --parallel --filter './services/*' dev",
-    "services:dev": "pnpm run --parallel --filter './services/*' dev",
-    "build": "pnpm run --filter './apps/**' --filter './services/**' --filter './packages/**' build",
-    "build:shell": "cd apps/shell && pnpm run build",
-    "build:widgets": "pnpm run --filter './apps/widgets/*' build",
-    "build:services": "pnpm run --filter './services/*' build",
-    "test": "pnpm run --filter './apps/**' --filter './services/**' --filter './packages/**' test",
-    "test:watch": "pnpm run --filter './apps/**' --filter './services/**' --filter './packages/**' test:watch",
-    "test:coverage": "pnpm run --filter './apps/**' --filter './services/**' --filter './packages/**' test:coverage && pnpm run coverage:check",
-    "test:integration": "cd services/api && pnpm run test:integration",
-    "test:ui": "pnpm run --filter './apps/shell' test:ui",
-    "test:lint": "pnpm run test:lint:skip",
-    "test:lint:skip": "grep -r 'describe.skip\\|it.skip\\|test.skip\\|xit\\|xdescribe' apps services packages || echo 'No skipped tests found ✓'",
+    "dev": "npm run dev:shell & npm run dev:services",
+    "dev:shell": "npm run dev --workspace=@composey/shell",
+    "dev:widgets": "npm run dev --workspaces --if-present",
+    "dev:services": "npm run dev --workspace=@composey/auth-service --workspace=@composey/api-service --workspace=@composey/payment-service --if-present",
+    "services:dev": "npm run dev:services",
+    "build": "npm run build --workspaces --if-present",
+    "build:shell": "npm run build --workspace=@composey/shell",
+    "build:widgets": "npm run build --workspace=@composey/auth-widget --workspace=@composey/course-management-widget --workspace=@composey/lesson-viewer-widget --workspace=@composey/quiz-engine-widget --workspace=@composey/progress-tracker-widget --workspace=@composey/checkout-widget --if-present",
+    "build:services": "npm run build --workspace=@composey/auth-service --workspace=@composey/api-service --workspace=@composey/payment-service --if-present",
+    "test": "npm run test --workspaces --if-present",
+    "test:watch": "npm run test:watch --workspaces --if-present",
+    "test:coverage": "npm run test:coverage --workspaces --if-present",
+    "test:integration": "cd services/api && npm run test:integration",
+    "test:ui": "npm run test:ui --workspace=@composey/shell --if-present",
+    "test:lint:skip": "findstr /s /r \"describe.skip it.skip test.skip\" apps services packages || echo No skipped tests found",
     "coverage:check": "node scripts/check-coverage.js",
-    "lint": "pnpm run --parallel lint:eslint lint:prettier",
-    "lint:eslint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 0",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 0",
     "lint:prettier": "prettier --check .",
     "format": "prettier --write .",
-    "typecheck": "pnpm run --parallel --filter './apps/**' --filter './services/**' --filter './packages/**' typecheck",
-    "lighthouse": "cd apps/shell && pnpm run lighthouse",
+    "typecheck": "npm run typecheck --workspaces --if-present",
+    "lighthouse": "cd apps/shell && npm run lighthouse",
     "lighthouse:test": "node scripts/check-lighthouse.js",
-    "security:check": "pnpm run --parallel security:scan security:audit",
-    "security:scan": "npm audit --audit-level=high || true",
-    "security:audit": "sonar-scanner -Dsonar.projectKey=composey-lms",
-    "db:init": "cd db && pnpm run migrate:latest",
-    "db:bootstrap": "pnpm run db:init && cd db && pnpm run seed:run",
-    "db:migrate:create": "cd db && pnpm run migrate:make",
-    "db:migrate:latest": "cd db && pnpm run migrate:latest",
-    "db:migrate:rollback": "cd db && pnpm run migrate:rollback",
-    "db:status": "cd db && pnpm run migrate:status",
-    "db:seed": "cd db && pnpm run seed:run",
-    "install:ci": "pnpm install --frozen-lockfile"
+    "security:check": "npm audit --audit-level=high || echo Security check complete",
+    "quality-gates:win": "powershell -ExecutionPolicy Bypass -File ./scripts/quality-gates.ps1",
+    "services:start": "npm run start --workspace=@composey/auth-service --workspace=@composey/api-service --workspace=@composey/payment-service --if-present",
+    "db:init": "cd db && npm run migrate:latest",
+    "db:bootstrap": "npm run db:init && cd db && npm run seed:run",
+    "db:migrate:create": "cd db && npm run migrate:make",
+    "db:migrate:latest": "cd db && npm run migrate:latest",
+    "db:migrate:rollback": "cd db && npm run migrate:rollback",
+    "db:status": "cd db && npm run migrate:status",
+    "db:seed": "cd db && npm run seed:run",
+    "install:ci": "npm ci"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
