--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "lighthouse": "^11.2.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.105.0"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
