--- a/services/api/package.json
+++ b/services/api/package.json
@@ -29,12 +29,16 @@
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "cookie-parser": "^1.4.6",
+    "bcryptjs": "^2.4.3",
+    "uuid": "^9.0.0",
     "@composey/shared-types": "1.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
     "@types/jest": "^29.5.11",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/uuid": "^9.0.7",
     "typescript": "^5.3.3",
     "ts-node-dev": "^2.0.0",
     "jest": "^29.7.0",
